--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Google </title>
 </head>
 <body>
@@ -25,7 +26,14 @@
             </a>
             <button>Sign In</button>
         </div>
+</header>
 
-    </header>
+<div class="brand_logo">
+    <img src="google_logo.png">
+</div>
+
+<div class="srch_bar">
+    <div class="srch_icon"><i class="fa-solid fa-magnifying-glass"></i></div>
+</div>
 </body>
 </html>
